update csv title

--- a/Simulating Data.ipynb
+++ b/Simulating Data.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,25 +1028,518 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>University</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Spend</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Specialist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>61223</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>86570</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>31521</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>81894</td>\n",
+       "      <td>10</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>99659</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>39254</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>76939</td>\n",
+       "      <td>7</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>62073</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>48310</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>56785</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>89570</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>81356</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>48306</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>61950</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>95838</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>58920</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>58538</td>\n",
+       "      <td>4</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>33286</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>43728</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>38640</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>93627</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>70663</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>28912</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>75586</td>\n",
+       "      <td>12</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>97130</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>46752</td>\n",
+       "      <td>12</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>84715</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>32997</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>78006</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>65800</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ann</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>40620</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>95381</td>\n",
+       "      <td>6</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>79268</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>94069</td>\n",
+       "      <td>3</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>93473</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>67512</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>44608</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>95557</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Specific</td>\n",
+       "      <td>42340</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>UCD</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>26913</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>77086</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>38429</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>DCU</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>38907</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>60489</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>35088</td>\n",
+       "      <td>8</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Agric</td>\n",
+       "      <td>40588</td>\n",
+       "      <td>10</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>UL</td>\n",
+       "      <td>Vet</td>\n",
+       "      <td>63395</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>85155</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>TCD</td>\n",
+       "      <td>Lab</td>\n",
+       "      <td>63214</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Mark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>NUIG</td>\n",
+       "      <td>Library</td>\n",
+       "      <td>25469</td>\n",
+       "      <td>4</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   University  Category  Spend  Month Specialist\n",
+       "0        NUIG     Agric  61223      8        Tom\n",
+       "1          UL       Lab  86570      9        Tom\n",
+       "2         UCD       Lab  31521      9       Mark\n",
+       "3         UCD       Vet  81894     10       John\n",
+       "4         UCD     Agric  99659      3       Mary\n",
+       "5         TCD     Agric  39254      9        Tom\n",
+       "6         UCD     Agric  76939      7       John\n",
+       "7         DCU     Agric  62073     12       Mary\n",
+       "8        NUIG   Library  48310      7       Mark\n",
+       "9          UL   Library  56785     10        Tom\n",
+       "10         UL       Lab  89570      2        Tom\n",
+       "11       NUIG   Library  81356      7        Ann\n",
+       "12        DCU       Vet  48306      9       Mary\n",
+       "13        TCD   Library  61950      9        Ann\n",
+       "14         UL  Specific  95838      4       Mark\n",
+       "15        TCD     Agric  58920      3        Ann\n",
+       "16        TCD       Lab  58538      4       John\n",
+       "17         UL  Specific  33286     11        Tom\n",
+       "18        TCD   Library  43728      7        Ann\n",
+       "19       NUIG  Specific  38640      4        Ann\n",
+       "20        UCD  Specific  93627      7       Mary\n",
+       "21         UL  Specific  70663      6       Mary\n",
+       "22        UCD   Library  28912      8        Ann\n",
+       "23         UL  Specific  75586     12       John\n",
+       "24        DCU  Specific  97130      1        Ann\n",
+       "25        UCD  Specific  46752     12       John\n",
+       "26         UL       Vet  84715      9        Ann\n",
+       "27        TCD  Specific  32997      5       Mark\n",
+       "28        UCD   Library  78006     11       Mark\n",
+       "29        UCD       Lab  65800      7        Ann\n",
+       "30        UCD       Vet  40620     12       Mary\n",
+       "31         UL     Agric  95381      6       John\n",
+       "32        TCD     Agric  79268      9       Mark\n",
+       "33        TCD   Library  94069      3       John\n",
+       "34        TCD       Vet  93473     12        Tom\n",
+       "35         UL       Vet  67512      4       Mary\n",
+       "36        DCU     Agric  44608     10       Mary\n",
+       "37       NUIG       Lab  95557      8        Tom\n",
+       "38        UCD  Specific  42340      6       Mary\n",
+       "39        UCD       Lab  26913      4       Mark\n",
+       "40        DCU       Vet  77086      5        Tom\n",
+       "41       NUIG   Library  38429      6       Mark\n",
+       "42        DCU       Lab  38907      4       Mark\n",
+       "43         UL       Lab  60489      4        Tom\n",
+       "44         UL       Vet  35088      8       John\n",
+       "45       NUIG     Agric  40588     10       John\n",
+       "46         UL       Vet  63395     10       Mary\n",
+       "47       NUIG       Lab  85155     10        Tom\n",
+       "48        TCD       Lab  63214      8       Mark\n",
+       "49       NUIG   Library  25469      4       John"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "raw_data = {'University': np.random.choice(uni_name, 50), \n",
     "        'Category': np.random.choice(cat_name, 50), \n",
     "        'Spend': np.random.randint(25000, 100000, 50),\n",
     "        'Month': np.random.randint(1, 13, 50),\n",
     "        'Specialist': np.random.choice(ee_name, 50)}\n",
-    "df = pd.DataFrame(raw_data, columns = ['University', 'Category', 'Spend', 'Month', 'Specialist'])\n"
+    "df = pd.DataFrame(raw_data, columns = ['University', 'Category', 'Spend', 'Month', 'Specialist'])\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('trial.csv')"
+    "df.to_csv('unispend.csv')"
    ]
   },
   {
@@ -1054,7 +1547,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv()"
+   ]
   },
   {
    "cell_type": "code",
